WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282933
REGRESSION (
265825@main
): [iOS] europa.eu: Scroll position jitters when scrolling over interactive map
https://bugs.webkit.org/show_bug.cgi?id=282933
Summary
REGRESSION (265825@main): [iOS] europa.eu: Scroll position jitters when scrol...
Wenson Hsieh
Reported
2024-11-11 08:42:58 PST
rdar://112427506
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-11-11 09:45:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36492
EWS
Comment 2
2024-11-11 12:56:08 PST
Committed
286448@main
(8612f9f7a3cd): <
https://commits.webkit.org/286448@main
> Reviewed commits have been landed. Closing PR #36492 and removing active labels.
Jonathan Bedard
Comment 3
2024-11-12 08:25:47 PST
<
rdar://problem/139723187
>
Jonathan Bedard
Comment 4
2024-11-12 08:26:11 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/36530
EWS
Comment 5
2024-11-12 08:28:43 PST
Committed
286482@main
(f75b60db03c5): <
https://commits.webkit.org/286482@main
> Reviewed commits have been landed. Closing PR #36530 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug