REGRESSION (265825@main): [iOS] europa.eu: Scroll position jitters when scrolling over interactive map (Follow-up) https://bugs.webkit.org/show_bug.cgi?id=282933 rdar://139723187

Unreviewed build fix.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _handleTouchActionsForTouchEvent:]):

Canonical link: https://commits.webkit.org/286482@main